--- a/src/main/resources/templates/board/question.html
+++ b/src/main/resources/templates/board/question.html
@@ -36,8 +36,7 @@
                         <div class="search">
                             <select name="type" class="form-select">
                                 <option value='T'>제목별</option>
-                                <option value='C'>내용</option>
-                                <option value='W'>작성자별</option>
+                                <option value='C'>내용별</option>
                             </select>
                             <label for="searchText"></label>
                             <input type="text" id="searchText" class="form-control" name="keyword" placeholder="검색">
