--- a/src/main/resources/static/css/admin/inquiryList.css
+++ b/src/main/resources/static/css/admin/inquiryList.css
@@ -15,3 +15,19 @@
     font-weight: bold;
     color: gray;
 }
+.search {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.form-select {
+    width: unset!important;
+}
+.form-control {
+    width: unset!important;
+}
+
+.admin-right >.title-container {
+    margin-bottom: 5rem;
+}
+
