--- a/src/main/resources/static/css/board/inquiryForm.css
+++ b/src/main/resources/static/css/board/inquiryForm.css
@@ -1,3 +1,10 @@
+body > .content-container-wrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 body > .content-container-wrapper > .content-container {
     max-width: 1200px;
     width: 100%;
