--- a/src/main/resources/templates/admin/inquiryList.html
+++ b/src/main/resources/templates/admin/inquiryList.html
@@ -12,10 +12,10 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/admin/inquiry.css">
+    <link rel="stylesheet" href="/css/admin/inquiryList.css">
 
     <!-- js -->
-    <script defer src="/js/admin/inquiry.js"></script>
+    <script defer src="/js/admin/inquiryList.js"></script>
 </head>
 <body>
 
@@ -32,7 +32,7 @@
                     <h1 class="title">고객문의 > 1:1 문의 내역</h1>
                 </div>
                     <div id="main_wrapper">
-                        <form id="searchForm">
+                        <form id="search_Form">
                             <div class="search">
                                 <input hidden type="text" th:value="${type}" class="type">
                                 <select name="type" class="form-select">
