--- a/src/main/resources/templates/admin/questionWrite.html
+++ b/src/main/resources/templates/admin/questionWrite.html
@@ -12,10 +12,10 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/board/write.css">
+    <link rel="stylesheet" href="/css/admin/questionWrite.css">
 
-    <!-- js -->
-    <script defer src="/js/admin/inquiry.js"></script>
+<!--    &lt;!&ndash; js &ndash;&gt;-->
+<!--    <script defer src="/js/admin/inquiryList.js"></script>-->
 </head>
 <body>
 
