--- a/src/main/resources/templates/board/inquiryForm.html
+++ b/src/main/resources/templates/board/inquiryForm.html
@@ -12,7 +12,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/board/basic.css">
+    <link rel="stylesheet" href="/css/board/inquiryForm.css">
 
     <!-- js -->
     <!--    <script defer src="/js/admin/modifyRoom.js"></script>-->
