--- a/src/main/resources/templates/board/questionUpdate.html
+++ b/src/main/resources/templates/board/questionUpdate.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>공지 게시글</title>
-    <link rel="stylesheet" href="/css/board/detail.css">
+    <link rel="stylesheet" href="/css/board/questionUpdate.css">
     <link rel="stylesheet" href="/css/common.css">
     <th:block th:insert="~{/fragments/link.html :: link_fragment}"></th:block>
-    <script defer src="/js/board/detail.js"></script>
+    <script defer src="/js/board/questionUpdate.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
