--- a/src/main/resources/templates/user/questionInfoDetail.html
+++ b/src/main/resources/templates/user/questionInfoDetail.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>나의 문의</title>
 
-    <link rel="stylesheet" href="/css/board/questionInfoDetail.css">
+    <link rel="stylesheet" href="/css/user/questionInfoDetail.css">
     <link rel="stylesheet" href="/css/user/myinfo.css">
     <link rel="stylesheet" href="/css/common.css">
-    <script defer src="/js/board/admin/detail.js"></script>
+    <script defer src="/js/user/questionInfoDetail.js"></script>
     <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
 </head>
 <body>
