이용약관, 개인정보처리방침 진행중

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -248,7 +248,7 @@ button {
     font-size: 0.9rem;
 }
 
-#footer .terms-policy-container .link.policy {
+#footer .terms-policy-container .link.privacy-policy {
     border-right: 0.0625rem solid #D2C4A5;
     box-sizing: border-box;
     padding: 0 1.5rem;
