--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -25,12 +25,12 @@
             </div>
             <ul class="terms-policy-container">
                 <li>
-                    <a class="link policy" href="#">
+                    <a class="link privacy-policy" href="/policy/privacyPolicy">
                         <span class="text">개인정보 처리방침</span>
                     </a>
                 </li>
                 <li>
-                    <a class="link terms" href="#">
+                    <a class="link terms" href="/policy/terms">
                         <span class="text">이용약관</span>
                     </a>
                 </li>
