--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
 
 <th:block th:fragment="header_fragment">
     <div class="content-container menu-container">
-        <h1 class="item logo">
+        <h1 class="logo">
             <a class="link" href="/">
                 <img th:src="@{/images/ITHOTEL.header.png}" class="title-logo">
             </a>
