--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -27,7 +27,7 @@
             <a href="/admin/questionWrite" class="link">자주하는 질문 작성</a>
         </div>
         <div class="link-container">
-            <a href="#" class="link">공지사항 작성</a>
+            <a href="/admin/noticeWrite" class="link">공지사항 작성</a>
         </div>
         <div class="link-container">
             <a href="/admin/inquiryList" class="link">1:1 문의 내역</a>
