개인정보처리방침, 이용약관 완료

--- a/src/main/resources/static/css/policy/privacyPolicy.css
+++ b/src/main/resources/static/css/policy/privacyPolicy.css
@@ -44,6 +44,7 @@
 }
 
 .privacy-policy-content {
+    background-color: #f1f1f1;
     max-height: 0;
     overflow: hidden;
     transition-duration: 500ms;
