--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -19,8 +19,10 @@
             <a href="/admin/reservationStatus" class="link">예약 현황</a>
         </li>
         <li>
-            <h2>문의 사항</h2>
-            <a href="/admin/inquiry" class="link">문의 내역</a>
+            <h2>고객문의</h2>
+            <a href="/admin/questionWrite" class="link">자주하는 질문 작성</a>
+            <a href="/admin/noticeWrite" class="link">공지사항 작성</a>
+            <a href="/admin/inquiryList" class="link">1:1 문의 내역</a>
         </li>
         <li>
             <h2>호텔 관리</h2>
