--- a/src/main/resources/templates/hotelInfo/info.html
+++ b/src/main/resources/templates/hotelInfo/info.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko" xmlns:th="">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,8 +8,8 @@
     <title>Document</title>
 
     <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
-    <link rel="stylesheet" th:href="@{/css/common.css}">
-    <link rel="stylesheet" th:href="@{/css/hotel/info.css}">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/hotelInfo/info.css">
 
 
 </head>
@@ -29,15 +29,15 @@
                 </div>
                 <div class="menu">
                     <div class="link-container">
-                        <a href="#" class="link">소개</a>
-                        <a href="#" class="link">연혁</a>
-                        <a href="#" class="link">수상이력</a>
+                        <a href="/hotelInfo/info" class="link">소개</a>
+                        <a href="/hotelInfo/history" class="link">연혁</a>
+                        <a href="/hotelInfo/award" class="link">수상 이력</a>
                     </div>
                 </div>
             </div>
             <div class="info-right">
                 <div class="title-container">
-                    <h1 class="title">소개</h1>
+                    <h1 class="title">호텔 소개 > 소개</h1>
                 </div>
                 <div class="image-container">
                     <img src="/images/sample.png" alt="">
