파일 업로드 수정해야함. DB에 들어갔는데 detail에 꺼내는거 해야함

--- a/src/main/resources/templates/admin/inquiryListDetail.html
+++ b/src/main/resources/templates/admin/inquiryListDetail.html
@@ -125,11 +125,7 @@
 
 <script>
     const listReq = () => {
-        if (history.length > 1) {
-            history.back();
-        } else {
-            window.close();
-        }
+        window.location = '/admin/inquiryList';
     }
 </script>
 </html>
