--- a/src/main/resources/templates/fragments/boardLeft.html
+++ b/src/main/resources/templates/fragments/boardLeft.html
@@ -27,7 +27,7 @@
             <a href="/board/inquiryForm" class="link">1:1 고객문의</a>
         </div>
         <div class="link-container">
-            <a href="/board/notice" class="link">공지사항</a>
+            <a href="/board/noticeList" class="link">공지사항</a>
         </div>
     </div>
 </div>
