--- a/src/main/resources/templates/board/noticeList.html
+++ b/src/main/resources/templates/board/noticeList.html
@@ -31,8 +31,27 @@
                 <div class="title-container">
                     <h1 class="title">고객문의 안내 > 공지사항</h1>
                 </div>
-
-
+                <table id="table_List" class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th>글제목</th>
+                        <th>작성일</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <!-- 댓글 !-->
+                    <tr th:each="noticeBoard : ${noticeBoardList}">
+                        <td>
+                            <a th:href="@{'/board/noticeList/' + ${noticeBoard.id}}">
+                                <span th:text="${noticeBoard.title}"></span>
+                            </a>
+                        </td>
+                        <td>
+                            <span th:text="${#temporals.format(noticeBoard.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
