홈페이지 디자인 작업중

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,7 +11,7 @@
     <div class="content-container">
         <div class="content-container-left">
             <a class="link" href="/">
-                <img th:src="@{/images/ITHOTEL.header.png}" class="title-logo">
+                <img src="/images/ITHOTEL.header.png" class="title-logo">
             </a>
             <p class="copyright">Copyright ⓒ 2023 ITHOTEL Inc.</p>
         </div>
