--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
     <div class="content-container menu-container">
         <h1 class="logo">
             <a class="link" href="/">
-                <img th:src="@{/images/ITHOTEL.header.png}" class="title-logo">
+                <img src="/images/ITHOTEL.header.png" class="title-logo">
             </a>
         </h1>
         <span class="spring"></span>
