--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -4,6 +4,11 @@ input:focus {
     outline : none;
 }
 
+.title {
+    font-size: 2.75rem;
+    font-weight: 500;
+}
+
 #main {
     align-items: stretch;
     display: flex;
@@ -70,4 +75,98 @@ input:focus {
 .slide:hover button.prev,
 .slide:hover button.next {
     opacity: 1;
+}
+
+.main-section-1 {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    margin-top: 7.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-section-1.visible {
+    opacity: 1;
+}
+
+.main-section-2 {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    margin-top: 12.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-section-2.visible {
+    opacity: 1;
+}
+
+.main-section-1 .text,
+.main-section-2 .text {
+    text-align: center;
+}
+
+.main-section-1 .img-container,
+.main-section-2 .img-container {
+    margin-top: 2.25rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.main-section-1 .img-container img,
+.main-section-2 .img-container img {
+    width: 350px;
+    height: 200px;
+}
+
+.swiper {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    margin: 12.5rem 0;
+    width: 100%;
+    height: 600px;
+}
+
+.swiper.visible {
+    opacity: 1;
+}
+
+.swiper-wrapper {
+    width: 1000px !important;
+    left: 100px;
+}
+
+.swiper-slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: relative;
+}
+
+.swiper img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    position: absolute;
+    color: black !important;
+}
+
+.info-container {
+    text-align: center;
+    z-index: 10;
+    width: 600px;
+    height: 150px;
+    position: absolute;
+    opacity: 0.7;
+    background-color: white;
+    left: 200px;
 }
