--- a/src/main/resources/templates/fragments/link.html
+++ b/src/main/resources/templates/fragments/link.html
@@ -22,7 +22,8 @@
             integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- js -->
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 </th:block>
 
 
