--- a/src/main/resources/templates/board/questionDetail.html
+++ b/src/main/resources/templates/board/questionDetail.html
@@ -17,7 +17,7 @@
 </header>
 <main id="main">
     <div id="main_wrapper">
-        <h1>공지 게시글</h1>
+        <h1>자주하는 질문 게시글</h1>
         <div class="card mb-4">
             <div class="card-body">
                 <form>
