챗봇 진행중

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -126,7 +126,8 @@ input:focus {
 .swiper {
     opacity: 0;
     transition: opacity 0.5s ease;
-    margin: 12.5rem 0;
+    margin-top: 12.5rem;
+    margin-bottom: 5rem;
     width: 100%;
     height: 600px;
 }
@@ -169,4 +170,58 @@ input:focus {
     opacity: 0.7;
     background-color: white;
     left: 200px;
+}
+
+.message-me {
+    display: inline-block;
+    max-width: 300px;
+    left: 5rem;
+    position: relative;
+    border-radius: 0.25rem;
+    padding: 10px;
+    margin-top: 5px;
+    background-color: #e6e6e6;
+}
+
+.message {
+    display: inline-block;
+    max-width: 300px;
+    border-radius: 0.25rem;
+    padding: 10px;
+    margin-top: 5px;
+    background-color: #e6e6e6;
+}
+
+#chat-container {
+    width: 400px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+}
+
+#chat-messages {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+#user-input {
+    display: flex;
+    padding: 10px;
+
+}
+#user-input input {
+    flex: 1;
+    padding: 10px;
+    outline: none;
+}
+#user-input button {
+    border: none;
+    background-color: #1e88e5;
+    color: white;
+    padding: 10px 15px;
+    cursor: pointer;
 }
