--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -322,6 +322,16 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
+
+        <div id="chat-container">
+            <div id="chat-messages">
+                <div class="message-me">ㅎㅇ</div>
+            </div>
+            <div id="user-input">
+                <input type="text" placeholder="메시지를 입력하세요..."/>
+                <button>전송</button>
+            </div>
+        </div>
     </div>
 </main>
 
