--- a/src/main/resources/templates/admin/questionWrite.html
+++ b/src/main/resources/templates/admin/questionWrite.html
@@ -32,7 +32,7 @@
                     <h1 class="title">고객문의 > 자주하는 질문 작성</h1>
                 </div>
                 <div id="main_wrapper">
-                    <form id="mainForm" method="post">
+                    <form id="mainForm">
                         <div>
                             <label class="form-label fw-bold fs-5">제목</label>
                             <input class="form-control" type="text" name="title" required>
