--- a/src/main/resources/templates/board/noticeBoardDetail.html
+++ b/src/main/resources/templates/board/noticeBoardDetail.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/board/basic.css">
 
-    <!-- js -->
-    <!--    <script defer src="/js/admin/modifyRoom.js"></script>-->
+    <script defer src="/js/board/noticeBoardDetail.js"></script>
 </head>
 <body>
 
@@ -33,8 +32,10 @@
                 </div>
                 <div class="information-info-container">
                     <div class="table_wrapper">
+                        <form id="notice_form">
                         <table class="main_table">
                             <tbody>
+                            <input type="hidden" name="idx" th:value="${noticeBoard.id}">
                             <tr>
                                 <th>
                                     <span>*</span>
@@ -64,6 +65,7 @@
                             </tr>
                             </tbody>
                         </table>
+                        </form>
                     </div>
                     <div class="card my-4" th:if="${noticeBoard.fileAttached == 0}">첨부 파일이 없습니다.</div>
                     <div class="card my-4" th:if="${noticeBoard.fileAttached == 1}">
@@ -71,6 +73,10 @@
                         <a th:href="@{'/board/noticeList/download?fileName='+${noticeBoardFileInfo.storedFileName}}">
                             <th:block th:text="${noticeBoardFileInfo.originalFileName}"></th:block>
                         </a>
+                    </div>
+                    <div th:if="${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails) and noticeBoard.getUser() == #authentication.principal.username}">}">
+                        <button class="btn btn-primary modify_notice_btn w-100">수정</button>
+                        <button class="btn btn-primary delete_notice_btn w-100">삭제</button>
                     </div>
                 </div>
             </div>
