--- a/src/main/resources/templates/board/noticeBoardDetail.html
+++ b/src/main/resources/templates/board/noticeBoardDetail.html
@@ -74,7 +74,7 @@
                             <th:block th:text="${noticeBoardFileInfo.originalFileName}"></th:block>
                         </a>
                     </div>
-                    <div th:if="${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails) and noticeBoard.getUser() == #authentication.principal.username}">}">
+                    <div th:if="${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails) and noticeBoard.getUser().getUserid() == #authentication.principal.username}">
                         <button class="btn btn-primary modify_notice_btn w-100">수정</button>
                         <button class="btn btn-primary delete_notice_btn w-100">삭제</button>
                     </div>
