--- a/src/main/resources/templates/board/noticeList.html
+++ b/src/main/resources/templates/board/noticeList.html
@@ -47,7 +47,7 @@
                             </a>
                         </td>
                         <td>
-                            <span th:text="${#temporals.format(noticeBoard.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                            <span th:text="${#temporals.format(noticeBoard.createdTime, 'yyyy-MM-dd')}"></span>
                         </td>
                     </tr>
                     </tbody>
