--- a/src/main/resources/templates/board/noticeBoardDetail.html
+++ b/src/main/resources/templates/board/noticeBoardDetail.html
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div th:if="${#authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails) and noticeBoard.getUser().getUserid() == #authentication.principal.username}">
-                        <button class="btn btn-primary modify_notice_btn w-100">수정</button>
+                        <button class="btn btn-primary modify_notice_btn w-100" onclick="modifyNotice()">수정</button>
                         <button class="btn btn-primary delete_notice_btn w-100">삭제</button>
                     </div>
                 </div>
