--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -313,6 +313,7 @@ button {
     padding: 0.925rem 3rem;
     border-radius: 0.375rem;
     border: 0.0625rem solid #ffffff;
+    z-index: 2;
 }
 
 #searchForm .label.person {
