--- a/src/main/resources/templates/user/findId.html
+++ b/src/main/resources/templates/user/findId.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/css/common.css">
     <!--    login.css  -->
     <link rel="stylesheet" href="/css/login.css">
+    <!--    findId.js -->
+    <script defer src="/js/user/findId.js"></script>
+
     <title>아이디 찾기</title>
 </head>
 <body>
@@ -35,77 +38,5 @@
 
 <!-- axios -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-
-<script>
-    const isValid = function(){
-        const name = document.querySelector('#name').value;
-        const email = document.querySelector('#email').value;
-        const code = document.querySelector('#emailCode').value;
-        if(name === ""){
-            alert('이름을 입력하세요');
-            return ;
-        } else if(email === "") {
-            alert('이메일을 입력하세요');
-            return;
-        }
-        axios.get('/user/confirmEmail?email='+email+"&code="+code)
-            .then( res => {
-                console.log(res);
-                if(code === ""){
-                    alert('이메일 인증이 필요합니다.');
-                    return ;
-                }
-                axios.get('/user/sendId?confirm=' + res.data.success + '&email=' + email)
-                    .then(res => {
-                        console.log(res);
-                        alert(res.data.message);
-                    })
-                    .catch(err => {
-                        console.log(err);
-                    })
-            })
-            .catch( err => { console.log(err); })
-    }
-    const EmailCheck = () => {
-        const name = document.querySelector('#name').value;
-        const email = document.querySelector('#email').value;
-        let regexEmail = new RegExp("^[a-zA-Z0-9+-\_.]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$");
-        const email_msg = document.querySelector('#email_msg');
-        axios.get('/user/existId?name=' + name + '&email=' + email)
-            .then(res => {
-                console.log(res);
-                if(res.data.success){
-                    email_msg.style.color = 'green';
-                    email_msg.innerHTML = res.data.message;
-                    return true;
-                } else {
-                    email_msg.style.color = 'orange';
-                    email_msg.innerHTML = res.data.message;
-                    return false;
-                }
-            })
-            .catch( err => {console.log(err);})
-        if(!regexEmail.test(email.trim())){
-            email_msg.textContent = "이메일 형식으로 작성해야 합니다.";
-            email_msg.style.color = 'orange';
-            return false;
-        }
-    }
-
-    const SendEmail = function(){
-        const email = document.querySelector('#email').value;
-        const email_msg = document.querySelector('#email_msg');
-        if(EmailCheck){
-            email_msg.style.color = 'green';
-            axios.get('/user/sendEmail/' + email)
-                .then(res => {
-                    console.log(res);
-                    document.querySelector('.code').style.display = 'block';
-                })
-                .catch( err => {console.log(err);} )
-        }
-    }
-</script>
 </body>
 </html>
