--- a/src/main/resources/templates/user/reservationInfo.html
+++ b/src/main/resources/templates/user/reservationInfo.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/css/user/reservationinfo.css">
 
     <!-- js -->
+    <script defer src="/js/user/reservationInfo.js"></script>
+
 </head>
 <body>
 
@@ -79,19 +81,4 @@
 
 
 </body>
-<script>
-    function cancel(id){
-        axios.delete('/user/deleteReservation/' + parseInt(id))
-            .then(res => {
-                console.log(res);
-                if(res.data === 'Success') {
-                    alert("예약이 취소되었습니다.");
-                    location.reload();
-                }
-                else
-                    alert("예약일이 당일이거나 지난 경우 취소가 불가능합니다.")
-            })
-            .catch(err => { console.log(err) })
-    }
-</script>
 </html>
