--- a/src/main/resources/templates/admin/reservationStatus.html
+++ b/src/main/resources/templates/admin/reservationStatus.html
@@ -45,7 +45,7 @@
                     </thead>
                     <tbody>
                     <tr class="empty" th:if="${reservationList.isEmpty()}">
-                        <td colspan="5">예약이 존재하지 않습니다.</td>
+                        <td colspan="6">예약이 존재하지 않습니다.</td>
                     </tr>
                     <tr th:each="reservation : ${reservationList}">
                         <td th:text="${reservation.user.name}"></td>
@@ -54,7 +54,9 @@
                         <td th:text="${reservation.checkin}"></td>
                         <td th:text="${reservation.checkout}"></td>
                         <td th:text="${reservation.status}"></td>
-                        <td>예약 취소 버튼</td>
+                        <td>
+                            <button class="button cancel-button" th:id="${reservation.id}" onclick="cancelReservation(this)">예약 취소</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
