adminboard, board 엔티티 삭제, adminboardservice삭제, boardservice로 통합

--- a/src/main/resources/templates/fragments/userLeft.html
+++ b/src/main/resources/templates/fragments/userLeft.html
@@ -32,7 +32,7 @@
             <h2 class="subtitle">문의사항</h2>
         </div>
         <div class="link-container">
-            <a href="/user/questionInfo?function=read" class="link">1:1 문의내역</a>
+            <a href="/user/inquiryInfo?function=read" class="link">1:1 문의내역</a>
         </div>
     </div>
 </div>
