--- a/src/main/resources/templates/user/inquiryInfoDetail.html
+++ b/src/main/resources/templates/user/inquiryInfoDetail.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>나의 문의</title>
 
-    <link rel="stylesheet" href="/css/user/questionInfoDetail.css">
+    <link rel="stylesheet" href="/css/user/inquiryInfoDetail.css">
     <link rel="stylesheet" href="/css/user/myinfo.css">
     <link rel="stylesheet" href="/css/common.css">
-    <script defer src="/js/user/questionInfoDetail.js"></script>
+    <script defer src="/js/user/inquiryInfoDetail.js"></script>
     <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
 </head>
 <body>
@@ -102,7 +102,7 @@
                     <button class="btn btn-outline-secondary" onclick="listReq()">문의현황으로 가기</button>
                     <th:block
                             th:if="${board != null and #authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails) and board.getUserid() == #authentication.principal.username}">
-                        <a th:href="@{/admin/questionInfo/{id}/adminRemove(id=${id})}" class="btn btn-outline-danger"
+                        <a th:href="@{/admin/inquiryInfo/{id}/Remove(id=${id})}" class="btn btn-outline-danger"
                            onclick="return confirm('삭제하시겠습니까?')">나의 문의 삭제</a>
                     </th:block>
         </div>
@@ -112,14 +112,4 @@
 </main>
 <th:block th:replace="~{/fragments/footer.html :: footer_fragment}"></th:block>
 </body>
-
-<script>
-    const listReq = () => {
-        if (history.length > 1) {
-            history.back();
-        } else {
-            window.close();
-        }
-    }
-</script>
 </html>
